--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../src/styles/normalize.css">
+  <link type="text/stylesheet" rel="stylesheet" href="../src/styles/normalize.css">
   <title>Drum Machine Exercise</title>
 </head>
 
